--- a/WolvenKit/MVVM/Views/Shell/HomePage/Pages/AboutPageView.xaml
+++ b/WolvenKit/MVVM/Views/Shell/HomePage/Pages/AboutPageView.xaml
@@ -98,6 +98,7 @@
                          FlowDirection="RightToLeft"
                          FontSize="12"
                          Foreground="{DynamicResource MahApps.Brushes.ThemeForeground}"
+                         ItemsSource="{Binding GithubCollection}"
                          ScrollViewer.HorizontalScrollBarVisibility="Disabled"
                          ScrollViewer.VerticalScrollBarVisibility="Disabled"
                          TitleInfo="Test"
