--- a/WolvenKit/MVVM/Views/Shell/Editor/MainView.xaml
+++ b/WolvenKit/MVVM/Views/Shell/Editor/MainView.xaml
@@ -76,6 +76,13 @@
                         </DataTemplate>
                     </ad:PanesTemplateSelector.FileViewTemplate>
 
+                       <!--  LogView  -->
+                    <ad:PanesTemplateSelector.PropertiesTemplate>
+                        <DataTemplate>
+                            <views1:PropertiesView />
+                        </DataTemplate>
+                    </ad:PanesTemplateSelector.PropertiesTemplate>
+
                     <!--  LogView  -->
                     <ad:PanesTemplateSelector.LogViewTemplate>
                         <DataTemplate>
